--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,216 @@
+14.06.2018 v 4.0.5
+https://develop.studip.de/trac/query?milestone=Stud.IP+4.0.5
+- Obsolete Tabellen vom alten Dateibereich noch in Benutzung [#7558]
+- HTML-ähnliche Inhalte verschwinden bei der Anzeige [#8209]
+- Dateibereich: Rotfärbung auf Meine Veranstaltung wird schon beim Betreten gelöscht [#8333]
+- Themen aus Veranstaltung kopieren [#8446]
+- Problem bei  (freiem) Dateinamen mit & [#8455]
+- Entzippen geht nicht [#8462]
+- NotificationCenter::postNotification triggert falsche Events [#8465]
+- Beim neuen Dateiupload-Dialog fehler bei externer Verwendung die Angabe der erlaubten Dateiarten und ~größen [#8466]
+- Betreff der Nachricht wird im responsiven Modus gedoppelt [#8469]
+- CSRF-Schwachstelle beim Eintragen in eine Veranstaltung [#8479]
+- CSRF-Schwachstelle beim Hinzufügen/Entfernen von Kontakten [#8480]
+- FileArchiveManager::createArchiveFromFolder funktioniert nicht [#8484]
+- VA - Zugangsberechtigungen: "Zuordnung zu einem bestehenden Anmeldeset"  ist nicht wirklich als interkatives Element erkennbar [#8488]
+- Übersetzungsfehler [#8491]
+- Dateibereich: Pfadangabe in den Metadaten einer Datei fehlt [#8496]
+- Fehlende Schreibrechte in upload_doc führen nicht zu einem Fehler [#8503]
+- Plugins werden auf einer Seite u.U. doppelt erzeugt [#8519]
+- Themenordner übernimmt nicht geänderten Titel [#8523]
+- Thema nach oben/unten verschieben ist kaputt [#8527]
+- Filter nach Datenfeldern berücksichtigt keine Standardwerte [#8552]
+- Dateiupload im WYSIWYG-Editor auf der Startseite und Co [#8566]
+- Fatal Error beim Zuweisen von Ilias Objekten (PHP 7.1) [#8576]
+- Themenordner: Titel kann scheinbar geändert werden/Reihenfolge der Themenordner [#8581]
+- ZIP-Archiv von mehreren Dateien hat keinen sinnvollen Namen [#8583]
+- Ablaufplan: Multiple Darstellungsprobleme beim Bearbeiten eines Termins [#8586]
+- Mailbenachrichtigung: Link aus den Mail landen immer auf normalem Login [#8587]
+- Ordner: Beschreibungstext erscheint doppelt [#8602]
+- Unterordner verschwinden beim Verschieben [#8608]
+- WikiPage::store wirft Exception [#8609]
+- Warning bei Anzeige des Dateipfads im Dashboard [#8630]
+- Öffentliche Ordner von anderen Nutzern können im eigenen Kontext geöffnet werden [#8631]
+- utf-8 Migration führt zu evtl. Datenverlust im Wiki [#8643]
+
+14.06.2018 v 3.5.6
+https://develop.studip.de/trac/query?milestone=Stud.IP+3.5.6
+- Plugin-Typ wird beim Update nicht aktualisiert [#1381]
+- Blubber: Fehlender Link [#5015]
+- Filtern nach Hashtag funktioniert nicht bei eigenen definierten Streams [#6292]
+- Forum funktioniert nicht [#6556]
+- mehrzeilige Eingabefelder werden oft nur einzeilig angezeigt [#7771]
+- FORMATTED_CONTENT_WRAPPER auf externen Seiten [#7898]
+- Modulkatalog wählt falsche Version als Default aus [#7899]
+- ActivityStream ignoriert Veröffentlichungsdatum von Ankündigungen [#7977]
+- Studienangebot zeigt Link zu deaktiviertem Studiengangsteil [#8022]
+- Blubber: Bearbeiten eines Blubs erzeugt dreimal dieselbe JS-Meldung [#8178]
+- Forum (WYSIWYG): Mehrfach-Upload von Bildern via Drag and Drop [#8303]
+- Eigene URL-Schemata als OAuth-Callback zulassen [#8331]
+- FORMATTED_CONTENT_WRAPPER in der Druckansicht [#8388]
+- Externe Links im WYSIWYG Editor werden nicht in neuem Tab oder Fenster geöffnet [#8400]
+- Texteinrückung geht beim Speichern im Editor verloren [#8429]
+- Anonyme Fragebögen für unangemeldete Nutzer [#8435]
+- Toolbar lässt sich nicht ohne WYSIWYG-Option darstellen [#8436]
+- Plugin Datenschutz: Datenschutzauskunft erstellen: html-Formatierungen sichtbar [#8440]
+- Benachrichtigung über Forenbeiträge für Admins fehlt [#8441]
+- Teilnehmer-Gruppen: Gruppen kann ohne Name angelegt werden [#8448]
+- Avatarbilder sind unter Umständen gedreht [#8449]
+- Profilseite-Einstellungen > Nachrichten [#8461]
+- Sperrregel Teilnehmer: Import weiterhin zugänglich [#8487]
+- fehlerhaftes Tag in englischer Statusmeldung [#8494]
+- Die Funktion getIconNavigation der StudipPlugin Klasse wird doppelt aufgerufen [#8505]
+- Icon-Klasse bindet noch PNG-Icons ins CSS ein [#8520]
+- Admins können Notification-Einstellungen von Nutzern nicht ändern [#8540]
+- Neue Gruppen anlegen ergibt Fehlermeldung [#8549]
+- Platzhalter in Select2 ignoriert überflüssigen Whitespace nicht [#8590]
+- Links auf externe Seiten mit rel="noopener" versehen [#8611]
+- MariaDB 10.2: SQL-Fehler bei den Evaluationen [#8612]
+- Institute::getMyInstitutes() liefert falsche Ergebnisse [#8614]
+- Raumplanung: Bereits gebuchter Raum kann nicht behalten werden, wenn keine Rechte daran bestehen [#8626]
+- Fehlerhaftes Uninstall-Skript der Anmelderegel mit beschränkter Teilnehmerzahl [#8543]
+
+12.04.2018 v 4.0.4
+https://develop.studip.de/trac/query?milestone=Stud.IP+4.0.4
+- Dateibereich: Gezippter Ordner trägt als Dateinamen Hash statt Namen [#8324]
+- Teilnehmer einer VA können Dateien löschen, für die sie gar keine Rechte haben [#8433]
+- Fragebögen: Korrekte Antwort geht verloren beim Umsortieren [#8434]
+- SORM: Eigene Callbacks sollten grundsätzlich zuerst ausgeführt werden [#8437]
+- Datei-API liefert keine URL für Datei-Links [#8439]
+- Zuviele Dateien werden als neu markiert [#8447]
+- Datenfelder für bedingte Anmeldung unsichtbar [#8450]
+- Suche im Vorlesungsverzeichnis mobil [#8453]
+
+03.04.2018 v 4.0.3
+https://develop.studip.de/trac/query?milestone=Stud.IP+4.0.3
+- bugbash: XSS bei Lernmodul-Account [#3321]
+- bugbash: Linkverschleierung seminar_main [#3345]
+- Export von Zusatzangaben defekt [#4086]
+- Navigationspunkte sollten keine Aktion sein [#4302]
+- Meine Veranstaltungen: Benachrichtigungen: Zurücksetzen funktioniert nicht [#4717]
+- SORM: Update des Primärschlüssels nicht möglich [#5420]
+- falsche Verwendung von gettext [#6193]
+- Benutzerkonto bearbeiten: fehlende Erfolgsmeldung u.a. [#6259]
+- calplus.gif wird unnötig vewendet [#6451]
+- "Veranstaltungsübersicht" für root verlinkt noch auf die Suche [#6500]
+- Tooltip-Icons der Datenfeldern bei den Grunddaten einer VA sind falsch ausgerichtet [#6822]
+- PHP7-Bugs-Warnings [#6824]
+- Profil-Menü in der Symbolleiste Gendern [#7582]
+- Optionen für Veranstaltungskategorien überflüssig [#7607]
+- Erfolgsmeldung nach Löschen von 1 Ordner grammatikalisch falsch [#7663]
+- Inkonsistenz zwischen "Ordneransicht" und "Alle Dateien" bez. Aktivitätsstatus  der Buttons [#7667]
+- StartupChecks wird nicht mehr verwendet [#7689]
+- Message-Route ist kaputt [#7950]
+- Die Stud.IP 4.0 Installationsanleitung ist veraltet [#7963]
+- Hochladen von Dateien: Dialog bleibt nach Upload stehen, wenn die Datei größer als post_max_size ist [#8043]
+- Benutzerverwaltung: Statusänderung einer Person in einer Einrichtung wird nicht gespeichert [#8060]
+- Zweimal Semester-Angabe in Archiv-Html [#8172]
+- API-Route GET /folder/:folder_id liefert falsche Werte in den Feldern "subfolders" und "data_content" [#8181]
+- Rest-API liefert keine Dateigrößen [#8184]
+- API-Route /folder/:folder_id/subfolders prüft nicht, ob die Unterordner sichtbar sind [#8185]
+- API-Routen zum Kopieren, Verschieben und Löschen von Ordnern liefert falsche Werte im Feld data_content [#8186]
+- Route /folder/:parent_folder_id/new_folder liefert falsche Daten zurück [#8187]
+- Route PUT /folder/:folder_id liefert kein Objekt zurück [#8188]
+- Lizenzabfrage hängt bei zipupload [#8220]
+- Nach Zipupload mit vielen Dateien bleibt das Dialogfenster stehen [#8224]
+- Checkbox einer neuen Datei enabled nicht die Buttons für Bulkactions [#8229]
+- Veranstaltungsdetails [#8233]
+- LVGruppen-Details verlinken noch auf archiv.php [#8267]
+- POST /dispatch.php/file/add_url => upstream sent too big header while reading response header from upstream [#8268]
+- Plugin-Assets können nicht korrekt ausgeliefert werden [#8271]
+- Quicksearch: Veranstaltungen ohne Nummer werden nicht gefunden [#8275]
+- Ordnerbeschreibungen werden nicht angezeigt [#8276]
+- Plugins: Origin, Version und Beschreibung nicht mehr in der Administration sichtbar [#8277]
+- Dateibereich: Drag and Drop-Probleme [#8305]
+- SEM_VISIBILITY_PERM wird in SemBrowse.php nicht beachtet [#8315]
+- Eigene URL-Schemata als OAuth-Callback zulassen [#8331]
+- Startseite: Widgets sollen in responsiver Ansicht nicht verschiebbar sein [#8337]
+- Responsives Design: Auf kleineren Smartphones verdeckt Footer Buttons [#8338]
+- Navigation fehlt bei Admin > Einrichtungen [#8351]
+- Dateibereich: Uploadeinschränkungen werden nicht ausgewertet und nicht angezeigt [#8359]
+- Profilseite: Kronen werden doppelt angezeigt [#8360]
+- Nachrichten: Exception beim Anhängeupload soll nicht mehr im Log landen [#8361]
+- Detailseite: Tabelle in Veranstaltungsort / Veranstaltungszeiten endet in dunkler Linie [#8363]
+- API: /course/:course_id fehlt "group" Attribut [#8364]
+- Dateibereich: Mehrzeilige Beschreibungen [#8367]
+- Laden von ExTerminen: CourseCancelledEvent::resource_id not found. [#8368]
+- Ressourcen: Error: Undefined class constant 'INACTIVE' [#8370]
+- Darstellungsfehler in Tooltips [#8371]
+- Suche nach freien Räumen für das ganze Semester funktioniert nicht mehr [#8383]
+- Fehlendes Icon für §60a [#8389]
+- Anmeldeset bearbeiten: Regel entfernen funktioniert nicht [#8393]
+- Kalender freigeben: Nutzer entfernen funktioniert nicht [#8395]
+- Hochladen der Infobilder in einer VA [#8397]
+- Themenordner und Gruppenordner verlieren Zuordnung beim erneuten speichern [#8398]
+- Ordnerbeschreibung ist nicht mehr formatiert [#8399]
+- csv / xls Exporte in Excel mit "kaputter" Kodierung [#8401]
+- Sortierung nach Dateityp/Ordnertyp funktioniert nicht [#8402]
+- MOADB Migration vertauscht alte Lizenzeinstellung [#8403]
+- Fatal Error in Nutzerverwaltung bei  "Alle Dateien des Nutzers aus Veranstaltungen und Einrichtungen als ZIP herunterladen" [#8404]
+- Buchung aus Gruppenraumplan heraus führt zur Raumsuche [#8405]
+- Verwaltung von Veranstaltungen: Archivieren hat hohen Speicherverbrauch [#8412]
+- Archivieren hinterlässt (viele) Artefakte [#8413]
+- Verwaltung von Veranstaltungen: Archivieren als Admin wirft AccessDeniedException [#8419]
+- Anlegen einer Studiengruppe [#8422]
+- Übersetzungstippfehler English Version [#7056]
+
+03.04.2018 v 3.5.5
+https://develop.studip.de/trac/query?milestone=Stud.IP+3.5.5
+- Fehler beim Ändern von  Raum/Zeit [#8373]
+- Admin "Meine Veranstaltungen ..." - warum ist die VA-Typ-Kategorie fett und nicht der VA-Typ? [#4680]
+- Admin: Verwaltung von Einrichtungen - Fehlender Seitentitel bzw.  Darstellung der gewählten Einrichtung [#4684]
+- Teilnehmerseite: Text in Sidebar [#4689]
+- Root: Startseite [#4694]
+- Ablaufplan: Rückmeldung nach Nachricht an alle Teilnehmer über ausfallenden Termin [#4702]
+- Funktionen/Gruppen verwalten: Fehlender Gruppenname im Dialogfenster "Personen eintragen" [#4713]
+- Blubber - Bearbeiten-Icon ändern [#5376]
+- Forum shouldn't call `addslashes` on message text [#5382]
+- Ich kann eine leere Umfrage erstellen [#6509]
+- MVV Dialogüberschrift in der Modulbeschreibung [#7135]
+- MVV LogEvent bei LV Gruppen [#7189]
+- Merge-Tool verwirrende Beschriftung [#7207]
+- MVV: Datenfelder zeigen HTML-Code in den Beschreibungen an [#7535]
+- Registrierung: Email-Adresse ändern [#7562]
+- Listenformat in Stud.IP [#7565]
+- Hilfelasche: Beim hinzufügen der Übersetzung geht das Original verloren [#7624]
+- MVV: Anlegen einer LV-Gruppe die es aber schon gibt [#7639]
+- Suche nach Studiengruppe zeigt trotz fehlendem Suchergebnis was an [#7655]
+- Blubber: IP-Adresse nur für anonyme Postings speichern [#7681]
+- Beim Löschen eines Einzeltermins mit Raum fehlt die Raumangabe in der Meldung [#7733]
+- Raumsuche beim Erstellen einer Raumanfrage ist sehr verwirrend [#7734]
+- Falsche Rechtevererbung an Admins in der Ressourcenverwaltung [#7838]
+- Nachrichten: Scrollbar in dem Feld für die Empfänger ist nicht benutzbar [#7845]
+- Fehlende serverseitige Validierung von Rechten [#7852]
+- Gruppenverwaltung: Batch-Bearbeitung setzt ungewünschte Werte [#7862]
+- WYSIWYG-Upload ohne Text funktioniert nicht [#7880]
+- Zeiten/Räume: Anlegen einer regelmäßigen Zeit legt zu viele Termine an [#7883]
+- Ergebnis der Modulsuche ist nicht sortiert [#7931]
+- Zeiten/Räume: Berechnungen von Start-/Endzeiten ist zu fragil [#8004]
+- Seite "Meine Veranstaltungen" sieht komisch aus [#8031]
+- fehlerhafte Anzeige von Icon/Reiter für Forum [#8074]
+- Nachrichten: Anzeigefehler in der Empfängerliste (Dialog) [#8086]
+- Nachrichtensystem: Empfängerliste und Suchfeld/mehrere Adressaten hinzufügen unschön wuselig [#8089]
+- QuickSearch liefert Name des ausgewählten Elements als HTML an callback [#8117]
+- Modulverwaltung: Call to a member function getFullName() on null [#8251]
+- "Teilnehmendenanzahl ändern" speichert die Wartelisteneinstellungen [#8266]
+- Kommentare zu Ankündigungen zentriert [#8316]
+- Exception beim Entfernen eines Widgets [#8321]
+- Ablaufplan: Exception: Geben Sie einen Titel an. [#8369]
+- Typo bei Raumanfragen [#8374]
+- Auswahl der Standard-Authentifizierung der REST-API wird nicht respektiert [#8377]
+- Mobile Ansicht: Haupt-Navigation verliert cid-Parameter nicht [#8379]
+- Nutzerdomänen ändern klappt nicht [#8380]
+- Messaging wirft Fehlermeldung [#8387]
+- REST-API: Falscher Stautscode beim Aufruf einer Route mit falscher HTTP-Methode [#8390]
+- Ressourcenverwaltung - Anfragenplan: Declaration of ScheduleWeekRequests::getColumnName($id) should be compatible with ScheduleWeek::getColumnName($id, $print_view = false) [#8392]
+- MultiUserSearch sieht unschön aus [#8396]
+- Dialog "Sie sind nicht mehr im System angemeldet." fehlt der "Schließen"-Knopf [#8414]
+- Archivieren von Forenbeiträgen klappt nicht [#8415]
+- NOT_HIDEABLE_FIELDS wird bei Anzeige nicht korrekt ausgewertet [#8423]
+- StudipAuthLdap -> Fehlermeldung liefert u.U. geheime Daten [#2966]
+- Sonderzeichen in E-Mail-Adressen erlauben [#3015]
+- Parameter von get_users_online_count() entfernen [#5340]
+
 17.03.2018 v 4.0.2
 https://develop.studip.de/trac/query?milestone=Stud.IP+4.0.2
 - select.submit-upon-select funktioniert nur sporadisch [#8011]
